--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "npx prisma generate && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:prod": "node dist/main",
@@ -40,7 +40,8 @@
     "dotenv": "^16.4.5",
     "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "server-template": "file:"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.7",
