--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,12 @@
       "src": "/(.*)",
       "dest": "src/main.ts",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
+    },
+    {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
     }
   ],
-  "static": {
-    "public": "public"
-  },
   "headers": [
     {
       "source": "/public/(.*).css",
