--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "schema": "src/infrastructure/database/prisma/schema.prisma"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/csrf-protection": "^6.4.1",
     "@fastify/helmet": "^11.1.1",
